[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbytetrack"
version = "0.1.0"
authors = [
  { name="egliette", email="leminhtu74@gmail.com" },
]
license = { text = "MIT" }
description = "Standalone BYTETrack"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.urls]
Homepage = "https://github.com/egliette/bytetrack"